# excelify

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  example.xlsx  hatch_build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  scratch.ipynb  test.xlsx
.github/workflows/: github-actions-demo.yml  python-test.yml
apps/excelify-viewer/backend/: app.py
apps/excelify-viewer/frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/excelify-viewer/frontend/src/: App.css  sheet.tsx  userState.tsx
apps/excelify-viewer/frontend/src/components/: Dialog.tsx  FileMenuBar.tsx  LoadDialog.tsx  MenuBar.tsx  SaveDialog.tsx  SpreadsheetHeader.tsx  SpreadsheetRowHeaders.tsx
apps/excelify-viewer/frontend/src/hooks/: useCellEditing.ts  useKeyboardNavigation.ts  useVirtualScrolling.ts
apps/excelify-viewer/frontend/src/services/: api.ts
apps/excelify-viewer/frontend/src/types/: index.ts
apps/excelify-viewer/frontend/src/utils/: cellRendering.ts  spreadsheetHelpers.ts
apps/excelify_viewer/: README.md
apps/excelify_viewer/backend/: app.py
apps/excelify_viewer/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/excelify_viewer/frontend/src/: App.tsx  main.tsx  pos.tsx  reportWebVitals.ts  setupTests.js  sheet.tsx  userState.tsx  vite-env.d.ts
apps/excelify_viewer/frontend/src/components/: Dialog.tsx  FileMenuBar.tsx  Formula.tsx  LoadDialog.tsx  MenuBar.tsx  SaveDialog.tsx  SpreadsheetGrid.tsx  SpreadsheetHeader.tsx  SpreadsheetRowHeaders.tsx
apps/excelify_viewer/frontend/src/hooks/: useCellEditing.ts  useKeyboardNavigation.ts  useVirtualScrolling.ts
apps/excelify_viewer/frontend/src/services/: api.ts
apps/excelify_viewer/frontend/src/types/: index.ts
apps/excelify_viewer/frontend/src/utils/: cellRendering.ts  index.ts  spreadsheetHelpers.ts
apps/excelify_viewer/protos/: __init__.py  rpc.proto  rpc_pb2.py  rpc_pb2.pyi  rpc_pb2_grpc.py
apps/excelify_viewer/server/: client.py  server.py
display/: index.html
docs/: display.md  excelframe.md  expressions.md  index.md  save_and_load.md
examples/: README.md
examples/dcf/: cashflow.py  cashflow_common.py  constants.py  historical_cashflow.py  main.py  projected_cashflow.py
examples/mortgage/: main.py
examples/options/: main.py
examples/portfolio/: example.csv  portfolio.py
examples/simple/: df.py
examples/stock_returns/: main.py
excelframe/: index.html
experiments/: dcf.ipynb  design_notes.ipynb  example.xlsx  example_value.xlsx  scratch.ipynb
expressions/: index.html
getting_started/: index.html
save_and_load/: index.html
search/: search_index.json
src/excelify/: __init__.py  __main__.py  _cell.py  _cell_expr.py  _cell_mapping.py  _col_conversion.py  _column.py  _display.py  _element.py  _excelframe.py  _expr.py  _html.py  _styler.py  _types.py  cli.py
src/excelify/formula/: __init__.py  _parser.py
test/: test_load_and_save.py  test_operator_precedence.py
