[project]
name = "excelify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Albert Han", email = "yjhan96@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "xlsxwriter>=3.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
venvPath = "."
venv = ".venv"
