[project]
name = "excelify"
version = "0.1.0"
description = "Create Spreadsheets using DataFrame-like API"
readme = "README.md"
authors = [
    { name = "Albert Han", email = "yjhan96@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "lark>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "polars>=1.29.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-doctest-custom>=1.0.0",
    "ruff>=0.11.6",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
venvPath = "."
venv = ".venv"

[project.scripts]
excelify-viewer = "excelify.cli:main"
