[project]
name = "excelify"
version = "0.1.4"
description = "Create Excel spreadsheets with formulas using a DataFrame-like API"
keywords = ["excel", "spreadsheet", "dataframe", "formulas", "xlsx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
authors = [
    { name = "Albert Han", email = "yjhan96@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "protobuf>=5.0.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "lark>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "polars>=1.29.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "pytest-doctest-custom>=1.0.0",
    "ruff>=0.11.6",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.2",
    "hatchling>=1.27.0",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/yjhan96/excelify"
Issues = "https://github.com/yjhan96/excelify/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excelify", "apps"]
artifacts = [
    "apps/excelify_viewer/backend/frontend_dist/**",
]
exclude = [
    "apps/excelify_viewer/frontend/**",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "apps/excelify_viewer/backend/frontend_dist/**",
]


[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[project.scripts]
excelify-viewer = "excelify.cli:main"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src",
    "test",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = [
    "apps/excelify_viewer",
    "src",
]
exclude = [
    "apps/excelify_viewer/protos",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]
